# my-admin-python

./: 7days.py  README.md  advancedExercise1.py  advancedExercise2.py  basicExercises.py  pyproject.toml
