[project]
name = "my-admin-python"
version = "0.1.0"
description = ""
authors = [
    {name = "周杨",email = "1141614570@qq.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp (>=3.12.15,<4.0.0)",
    "fastapi (>=0.117.1,<0.118.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "sqlmodel (>=0.0.25,<0.0.26)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
